plowshare (0.9svn) stable; urgency=low

  * [letitbit] add module (anonymous download only)
  * [storage.to] add module (anonymous download only)
  * [uploaded.to] add module (anonymous download only)
  * Fallback to img2txt (libcaca) if aview is not found

 --  <tokland@gmail.com>  Thu, 10 Dec 2009 20:23:20 +0100

plowshare (0.8.1) stable; urgency=medium

  * Add plowdel executable
  * [plowdown] Add new -r RATE/--limit-rate=RATE option
  * [megaupload] Add delete support

 -- Arnau Sanchez <tokland@gmail.com>  Wed, 07 Oct 2009 22:45:53 +0200

plowshare (0.8) stable; urgency=low

  * Added module for depositfiles (download only)
  * [download] New option -o DIR, --output-directory=DIR
  * [megaupload] Use tesseract as OCR for the new simplier captcha
  * [megaupload] Support for multifetch uploads
  * [rapidshare] More tolerant wait messages parsing

 -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 16 May 2009 11:52:51 +0200

plowshare (0.7.1) unstable; urgency=low

  * Improve download/upload loops (retry on non-fatal network problems)
  * Fix test library
  * [mediafire] update module to website changed in HTML

 -- Arnau Sanchez <pyarnau@gmail.com>  Sun, 03 May 2009 22:49:31 +0200

plowshare (0.7) unstable; urgency=low

  * [zshared] add module (download) 
  * [megaupload] refactor catpcha decoder

 -- Arnau Sanchez <pyarnau@gmail.com>  Wed, 15 Apr 2009 18:23:05 +0200

plowshare (0.6) unstable; urgency=low

  * [4shared] add module and download support for 4shared
  * [megaupload] increase slightly the OCR rate (~ 40%)
  * [download] add check-link support for all existing modules

 -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 28 Mar 2009 15:51:48 +0100

plowshare (0.5.3) unstable; urgency=low

  * [megaupload] Support new 4-rotated-highly-overlapped captcha 

 -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 21 Mar 2009 00:09:22 +0100

plowshare (0.5.2) unstable; urgency=low

  * Fix setup.sh bugs 

 -- Arnau Sanchez <pyarnau@gmail.com>  Sun, 15 Mar 2009 01:08:57 +0100
