@@ -31,7 +31,7 @@ delete() {
 UPFILE="$ROOTDIR/COPYING"
 UPFILE2="$ROOTDIR/CHANGELOG"
 
-## Rapidshare
+# Rapidshare
 
 RAPIDSHARE_URL="http://www.rapidshare.com/files/86545320/Tux-Trainer_25-01-2008.rar"
 
@@ -39,12 +39,12 @@ test_rapidshare_download_anonymous() {
     FILENAME="Tux-Trainer_25-01-2008.rar"
     assert_equal "$FILENAME" "$(download $RAPIDSHARE_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_rapidshare_upload_anonymous() {
     assert_match "http://rapidshare.com/files/" "$(upload $UPFILE rapidshare)" ||
         return 1
-}        
+}
 
 test_rapidshare_upload_freezone() {
     FREEZONE_URL="https://ssl.rapidshare.com/cgi-bin/collectorszone.cgi"
@@ -55,16 +55,16 @@ test_rapidshare_upload_freezone() {
     PARSE="<td>Files: <b>\(.*\)<\/b>"
     FILES1=$(curl -s -b <(echo "$COOKIES") "$FREEZONE_URL" | parse $PARSE)
     URL=$(upload -a "$AUTH" $UPFILE rapidshare)
-    assert_match "http://rapidshare.com/files/" "$URL" || return 1 
+    assert_match "http://rapidshare.com/files/" "$URL" || return 1
     FILES2=$(curl -s -b <(echo "$COOKIES") "$FREEZONE_URL" | parse $PARSE)
     assert_equal $(($FILES1+1)) $FILES2 || return 1
-}        
+}
 
 test_rapidshare_check_active_link() {
     assert_equal "$RAPIDSHARE_URL" "$(download -c $RAPIDSHARE_URL)" || return 1
-}                
+}
 
-## Megaupload
+# Megaupload
 
 MEGAUPLOAD_URL="http://www.megaupload.com/?d=ieo1g52v"
 
@@ -72,7 +72,7 @@ test_megaupload_download_anonymous() {
     FILENAME="testmotion2.mp4"
     assert_equal "$FILENAME" "$(download $MEGAUPLOAD_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_megaupload_download_a_password_protected_file() {
     URL="http://www.megaupload.com/?d=4YF0D6A3"
@@ -94,32 +94,32 @@ test_megaupload_download_member() {
     FILENAME="testmotion2.mp4"
     assert_equal "$FILENAME" "$(download -a "$AUTH" $MEGAUPLOAD_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_megaupload_download_premium() {
     test -e $TESTSDIR/.megaupload-premium-auth || return 255
     AUTH=$(cat $TESTSDIR/.megaupload-premium-auth)
     OUTPUT=$(download -a "$AUTH" $MEGAUPLOAD_URL)
     FILENAME="testmotion2.mp4"
-    assert_equal "$FILENAME" "$OUTPUT" || return 1 
+    assert_equal "$FILENAME" "$OUTPUT" || return 1
     rm -f $FILENAME
 }
 
 test_megaupload_check_active_link() {
     assert_equal "$MEGAUPLOAD_URL" "$(download -c $MEGAUPLOAD_URL)" || return 1
-}                
+}
 
 test_megaupload_upload_anonymous() {
     URL="$(upload -d 'Plowshare test' $UPFILE megaupload)"
     assert_match "http://www.megaupload.com/?d=" "$URL" || return 1
-}        
+}
 
 test_megaupload_upload_member() {
     test -e $TESTSDIR/.megaupload-auth || return 255
     AUTH=$(cat $TESTSDIR/.megaupload-auth)
     URL=$(upload -d 'Plowshare test' -a "$AUTH" $UPFILE megaupload)
     assert_match "http://www.megaupload.com/?d=" "$URL" || return 1
-}        
+}
 
 test_megaupload_upload_premium_with_password() {
     test -e $TESTSDIR/.megaupload-premium-auth || return 255
@@ -128,7 +128,7 @@ test_megaupload_upload_premium_with_password() {
         -d 'Plowshare test' $UPFILE megaupload)
     assert_match "http://www.megaupload.com/?d=" "$URL" || return 1
     assert_return 0 'match "name=\"filepassword\"" "$(curl $URL)"' || return 1
-}        
+}
 
 test_megaupload_upload_premium_using_multifetch() {
     test -e $TESTSDIR/.megaupload-premium-auth || return 255
@@ -136,16 +136,16 @@ test_megaupload_upload_premium_using_multifetch() {
     URL=$(upload -a "$AUTH" --multifetch --clear-log \
         -d 'Plowshare test' "http://www.gnu.org/licenses/gpl.txt" megaupload)
     assert_match "http://www.megaupload.com/?d=" "$URL" || return 1
-}        
+}
 
 test_megaupload_delete_member() {
     test -e $TESTSDIR/.megaupload-auth || return 255
     AUTH=$(cat $TESTSDIR/.megaupload-auth)
     URL=$(upload -d 'Plowshare test' -a "$AUTH" $UPFILE2 megaupload)
     assert_return 0 "delete -a $AUTH $URL" || return 1
-}        
+}
 
-## 2Shared
+# 2Shared
 
 SHARED_URL="http://www.2shared.com/file/4446939/c9fd70d6/Test.html"
 
@@ -153,11 +153,11 @@ test_2shared_download() {
     FILENAME="Test.mp3"
     assert_equal "$FILENAME" "$(download $SHARED_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_2shared_download_and_get_only_link() {
     URL="2shared.com/download/4446939/c9fd70d6/Test.mp3"
-    assert_match "http://.*Test.mp3.* Test.mp3" "$(download -r echo $SHARED_URL)" || return 1    
+    assert_match "http://.*Test.mp3.* Test.mp3" "$(download -r echo $SHARED_URL)" || return 1
 }
 
 test_2shared_download_using_file_argument_and_mark_as_downloaded() {
@@ -166,19 +166,19 @@ test_2shared_download_using_file_argument_and_mark_as_downloaded() {
     echo "$SHARED_URL" > $TEMP
     download -m "$TEMP" || return 1
     assert_match "^#$SHARED_URL" "$(cat $TEMP)" || return 1
-    rm -f "$TEMP"    
-}        
+    rm -f "$TEMP"
+}
 
 test_2shared_check_active_link() {
     assert_equal "$SHARED_URL" "$(download -c $SHARED_URL)" || return 1
-}                
-        
+}
+
 test_2shared_upload() {
     assert_match "^http://www.2shared.com/file/" "$(upload $UPFILE 2shared)" ||
         return 1
-}        
+}
 
-## Badongo
+# Badongo
 
 BADONGO_URL="http://www.badongo.com/file/10855869"
 
@@ -186,13 +186,13 @@ test_badongo_download() {
     FILENAME="0906_web_abstract.pdf"
     assert_equal "$FILENAME" "$(download $BADONGO_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_badongo_check_active_link() {
     assert_equal "$BADONGO_URL" "$(download -c $BADONGO_URL)" || return 1
-}                
+}
 
-## Mediafire
+# Mediafire
 
 MEDIAFIRE_URL="http://www.mediafire.com/?mokvnz2y43y"
 
@@ -200,13 +200,13 @@ test_mediafire_download() {
     FILENAME="Nature+Medicine.pdf"
     assert_equal "$FILENAME" "$(download $MEDIAFIRE_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_mediafire_check_active_link() {
     assert_equal "$MEDIAFIRE_URL" "$(download -c $MEDIAFIRE_URL)" || return 1
-}                
+}
 
-## 4shared
+# 4shared
 
 FSHARED_URL="http://www.4shared.com/file/14767114/7939c436/John_Milton_-_Paradise_Lost.html?s=1"
 
@@ -214,11 +214,11 @@ test_4shared_download() {
     FILENAME="John_Milton_-_Paradise_Lost.pdf"
     assert_equal "$FILENAME" "$(download $FSHARED_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_4shared_check_active_link() {
     assert_equal "$FSHARED_URL" "$(download -c $FSHARED_URL)" || return 1
-}        
+}
 
 # Zshare
 
@@ -228,11 +228,11 @@ test_zshare_download() {
     FILENAME="swos_fullrip_killer_pepo_absba.part01.rar"
     assert_equal "$FILENAME" "$(download $ZSHARE_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_zshare_check_active_link() {
     assert_equal "$ZSHARE_URL" "$(download -c $ZSHARE_URL)" || return 1
-}        
+}
 
 # Depositfiles
 
@@ -242,19 +242,19 @@ DEPOSIT_BIG_URL="http://depositfiles.com/es/files/vd58vei0y"
 test_depositfiles_check_active_link() {
     assert_equal "$DEPOSIT_SMALL_URL" "$(download -c $DEPOSIT_SMALL_URL)" || return 1
     assert_equal "" "$(download -c ${DEPOSIT_SMALL_URL}wronglink)" || return 1
-}        
+}
 
 test_depositfiles_download_small_file() {
     FILENAME="untitled87.bmp"
     assert_equal "$FILENAME" "$(download $DEPOSIT_SMALL_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_depositfiles_download_big_file() {
     FILENAME="1002-BIOS-Asus_P5Q_SE_for_MAC_OS_X___VISTA_SLIC_all_OS__incl._by_Juzzi..ROM.zip"
     assert_equal "$FILENAME" "$(download $DEPOSIT_BIG_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 # Storage.to
 
@@ -264,11 +264,11 @@ test_storage_to_download() {
     FILENAME="debian032.jpg"
     assert_equal "$FILENAME" "$(download $STORAGE_TO_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_storage_to_check_active_link() {
     assert_equal "$STORAGE_TO_URL" "$(download -c $STORAGE_TO_URL)" || return 1
-}        
+}
 
 # Uploaded.to
 
@@ -279,18 +279,27 @@ test_uploaded_to_download_short_url() {
     FILENAME="debian047.jpg"
     assert_equal "$FILENAME" "$(download $UPLOADED_TO_URL1)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_uploaded_to_download_long_url() {
     FILENAME="debian047.jpg"
     assert_equal "$FILENAME" "$(download $UPLOADED_TO_URL2)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_uploaded_to_check_active_link() {
     assert_equal "$UPLOADED_TO_URL1" "$(download -c $UPLOADED_TO_URL1)" || return 1
-}        
+}
 
+# Netload.in
+
+NETLOAD_IN_URL="http://netload.in/dateiwDu3f8HcwV/RFCs0001-0500.tar.gz.htm"
+
+test_netload_in_download() {
+    FILENAME="RFCs0001-0500.tar.gz"
+    assert_equal "$FILENAME" "$(download $NETLOAD_IN_URL)" || return 1
+    rm -f $FILENAME
+}
 
 # Uploading.com
 
@@ -302,7 +311,6 @@ test_uploading_download() {
     rm -f $FILENAME
 }
 
-
 # Usershare.net
 
 USERSHARE_URL="http://usershare.net/wzvqgcz6ugn8"
@@ -311,12 +319,11 @@ test_usershare_download() {
     FILENAME="Test.mp3"
     assert_equal "$FILENAME" "$(download $USERSHARE_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_usershare_check_active_link() {
     assert_equal "$USERSHARE_URL" "$(download -c $USERSHARE_URL)" || return 1
-}                
-        
+}
 
 # Sendspace.net
 
@@ -326,11 +333,11 @@ test_sendspace_download() {
     FILENAME="Test.mp3"
     assert_equal "$FILENAME" "$(download $SENDSPACE_URL)" || return 1
     rm -f $FILENAME
-}        
+}
 
 test_sendspace_check_active_link() {
     assert_equal "$SENDSPACE_URL" "$(download -c $SENDSPACE_URL)" || return 1
-}                
-        
+}
+
 
 run_tests "$@"
